<resources>
    <string name="app_name">Shop Easy</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome</string>
    <string name="title_activity_register">RegisterActivity</string>
    <color name="white">#FFFFFF</color>
    <string name="submit">SUBMIT</string>

    <string name="userType">Register as &#8230;</string>

    <string-array name="products">
        <item>Bread    50</item>
        <item>Sugar    100</item>
        <item>Flour    120</item>
        <item>Honey    200</item>
        <item>Chocolate    50</item>
        <!--<item>A4    60</item>-->
        <!--<item>Phone    7990</item>-->
        <!--<item>Fridge    40000</item>-->
    </string-array>

    <string name="home">Home</string>
    <string name="btn_login">Login</string>
    <string name="Login">Login</string>
    <string name="sampleMail">abc@gmail.com</string>
    <string name="Pay">Pay Via? </string>


    <string name="password">Password</string>
    <string name="Enter_password">Enter Password</string>
    <string name="ConfirmPassword">Confirm Password</string>


    <string name="attempts">Attempts Left:</string>
    <string name="scan">Scan </string>
    <string name="items">My Items </string>
    <string name="result">Result </string>


    <string name="Register">Register</string>
    <string name="regNo">Reg No</string>

    <string name="hint_enter_regNo">Enter Registration Number</string>
    <string name="btn_sign_up">Sign Up</string>

    <string name="Enter_First_name">Enter First Name</string>
    <string name="Enter_Last_name">Enter Last Name</string>

    <string name="hint_gender">Gender</string>
    <string name="loginLink">Already registered? Click here to login. </string>
    <string name="saf">M-Pesa</string>
    <string name="bank">VISA</string>
    <string name="send">Pay</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="Enter_Email">  Email</string>

    <string name="link_signup">Haven\'t registered yet? Click here to register.</string>
    <string name="btn_link_login">Have an account? Login !!</string>
    <string name="title_activity_scan">ScanActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_items">ItemsActivity</string>
</resources>
